--- a/style.css
+++ b/style.css
@@ -283,12 +283,6 @@ main .wrapper {
     padding-left: 4rem;
   }
 
-  /*--------------------- logo alura ---------------------*/
-
-/* gambiarra para mover o A */
-  .alura-img {
-    padding-inline: 20rem;
-  }
 
   /*--------------------- sobre | cards ---------------------*/
   .cards {
@@ -307,11 +301,10 @@ main .wrapper {
     text-align: center;
   }
 }
-
-
-/* gambiarra para mover o A */
-@media (min-width: 1920px) {
-  .alura-img {
-    padding-inline: 27rem;
+ #btn-cripto,
+  #btn-descripto {
+    width: 100%!important;
+    padding: 0px!important;
+    margin: 5px 0px!important;
   }
 }
